--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ Python version 3.13
 'numpy == version 2.3.0'
 'tqdm == version 4.67.1'
 'requests == version 2.32.4'
+'json5 == version 0.12.0'
+'urllib3 == version 2.5.0'
